--- a/botconfig.json
+++ b/botconfig.json
@@ -3,7 +3,7 @@
     "PREFIX": ".",
     "owner": "436341690119356426",
     "stats": "WATCHING",
-    "status": "online",
+    "status": "dnd",
     "version": "1.0",
     "devs": [
         "Anish Shobith#3265"
