--- a/botconfig.json
+++ b/botconfig.json
@@ -6,6 +6,6 @@
     "status": "online",
     "version": "1.0",
     "devs": [
-        "Anish Shobith#3265"
+        "๖ۣۜζ͜͡CL4W | MR_EVIL#1966"
     ]
 }
