--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "base-64": "^0.1.0",
     "bufferutil": "^4.0.0",
+    "canvas": "^2.0.1",
     "chalk": "^2.4.1",
     "cleverbot.io": "^1.0.4",
+    "client": "0.0.1",
     "cpu-stat": "^2.0.1",
     "discord-economy": "^1.1.5",
     "discord.js": "^11.4.2",
@@ -22,6 +24,7 @@
     "moment-duration-format": "^2.2.2",
     "ms": "^2.1.1",
     "os": "^0.1.1",
+    "package.json": "^2.0.1",
     "sequelize": "^4.41.2",
     "sqlite3": "^4.0.4",
     "superagent": "^4.0.0-beta.5",
